# apbattle

./: .gitignore  CMakeLists.txt  Doxyfile.bak  README.md
doc/: asio_client_server_ex.cpp  manual_gui.cpp.bak  misc_parsing.cpp
include/: cereal
include/apbattle/: battle_board.h  battleship_agent.h  battleship_gui.h  bship_common.h  counting_agent.h  enemy_battle_board.h  manual_agent.h  player_battle_board.h  socket_client.h  socket_connection.h  socket_server.h
src/: battle_board.cpp  battleship_agent.cpp  battleship_gui.cpp  counting_agent.cpp  enemy_battle_board.cpp  manual_agent.cpp  manual_gui.cpp  player_battle_board.cpp  run_counting_agent.cpp  run_manual_agent.cpp  run_random_agent.cpp  socket_connection.cpp
src/test/: dummy_client.cpp  dummy_server.cpp  test_agent.cpp  test_board.cpp  test_msgs.cpp  test_socket.cpp
